--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,94 @@
 
-.navbar {
-    margin-bottom: 0;
-    border-radius:0;
-    background-color: grey;
-    color:black;
-    padding: 1%;
-    border:0;
-    list-style-type: none;
+nav {
+    width: 100%;
 }
 
 .navbar-brand {
-    float: left;
-    min-height: 55px;
-    padding: 0 15px 15px;
+    position: relative; 
+    Left: 200px;
 }
+footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+}
+
+p {
+    font-size: 24px;
+}
+
+.img-thumbnail {
+    height: 40%;
+}
+
+ul {
+    float: right;
+}
+
+.btn {
+    position: relative;
+    LEFT: 200px;
+}
+
+#main-container {
+    padding-top: 130px;
+    min-height: calc(100vh - 70px);
+  }
+  
+  .main-section {
+    float: left;
+    width: 100%;
+    max-width: 960px;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #ffffff;
+    border: 1px solid #dddddd;
+  }
+  .container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+  }
+  
+.work {
+    position: relative;
+    float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
+  }
+  
+  .work:nth-child(even) {
+    margin-right: 40px;
+  }
+  
+  .work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+  }
+  
+  .work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #ffffff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+  }
+  
+  .auth-image {
+    float: left;
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+  }
+  
